# audio-to-midi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  test_modular.py  test_setup.py  voice_to_midi.py
.github/workflows/: dependencies.yml  quality.yml  release.yml
audio_to_midi/: __init__.py  main.py
audio_to_midi/audio/: __init__.py  capture.py  processor.py
audio_to_midi/cli/: __init__.py  commands.py  interface.py
audio_to_midi/config/: __init__.py  manager.py  settings.py
audio_to_midi/core/: __init__.py  application.py  exceptions.py
audio_to_midi/devices/: __init__.py  audio_devices.py  midi_devices.py
audio_to_midi/midi/: __init__.py  messages.py  output.py
audio_to_midi/pitch/: __init__.py  analyzer.py  detector.py
audio_to_midi/utils/: __init__.py  helpers.py
tests/: test_basic.py
voice_to_midi/: __init__.py  main.py
voice_to_midi/audio/: __init__.py  capture.py  processor.py
voice_to_midi/cli/: __init__.py  commands.py  interface.py
voice_to_midi/config/: __init__.py  manager.py  settings.py
voice_to_midi/core/: __init__.py  application.py  exceptions.py
voice_to_midi/devices/: __init__.py  audio_devices.py  midi_devices.py
voice_to_midi/midi/: __init__.py  messages.py  output.py
voice_to_midi/pitch/: __init__.py  analyzer.py  detector.py
voice_to_midi/utils/: __init__.py  helpers.py
