[project]
name = "voice-to-midi"
version = "0.1.0"
description = "Real-time voice to MIDI translation"
authors = [
    {name = "Voice to MIDI Translator", email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyaudio>=0.2.11",
    "numpy>=1.21.0",
    "librosa>=0.10.0",
    "mido>=1.2.10",
    "python-rtmidi>=1.4.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "click>=8.0",
    "rich>=13.0",
    "questionary>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

# System dependencies required
[project.scripts]
voice-to-midi = "voice_to_midi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uvx]
name = "voice-to-midi"
entry-point = "voice_to_midi:main"


