[project]
name = "voice-to-midi"
version = "0.2.0"
description = "Modular real-time voice to MIDI translation with enhanced CLI"
authors = [
    {name = "Voice to MIDI Translator", email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyaudio>=0.2.11",
    "numpy>=1.21.0",
    "librosa>=0.10.0",
    "mido>=1.2.10",
    "python-rtmidi>=1.4.0",
    "scipy>=1.7.0",
    "click>=8.0",
    "rich>=13.0",
    "questionary>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

# System dependencies required
[project.scripts]
voice-to-midi = "voice_to_midi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uvx]
name = "voice-to-midi"
entry-point = "voice_to_midi.main:main"


