[project]
name = "audio-to-midi"
version = "0.2.0"
description = "Modular real-time audio to MIDI translation with enhanced CLI"
authors = [{ name = "Audio to MIDI Translator", email = "user@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyaudio>=0.2.11",
    "numpy>=1.21.0",
    "librosa>=0.10.0",
    "mido>=1.2.10",
    "python-rtmidi>=1.4.0",
    "scipy>=1.7.0",
    "click>=8.0",
    "rich>=13.0",
    "questionary>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
    "black>=21.0",
    "ruff>=0.8.0",
    "mypy>=0.910",
    "types-requests",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "pre-commit>=2.0",
]

# System dependencies required
[project.scripts]
audio-to-midi = "audio_to_midi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
disable_error_code = ["unreachable"]

[[tool.mypy.overrides]]
module = ["pyaudio.*", "librosa.*", "mido.*", "rtmidi.*", "questionary.*"]
ignore_missing_imports = true

[tool.uvx]
name = "audio-to-midi"
entry-point = "audio_to_midi.main:main"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "mypy>=1.14.1",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "ruff>=0.12.3",
]
